--- a/ProyectoFinalAp2/Shared/NavMenu.razor
+++ b/ProyectoFinalAp2/Shared/NavMenu.razor
@@ -19,43 +19,48 @@
                     </NavLink>
                     @if (stateRegister)
                     {
-                        <ul class="children">
-                            <li class="list-unstyled">
-                                <NavLink class="nav-link" href="Categorias">
-                                    <span class="icon-category" aria-hidden="true"></span> Categoria
-                                </NavLink>
-                            </li>
+                <ul class="children">
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Registros/Marcas">
+                            <span class="icon-branding_watermark" aria-hidden="true"></span> Marca
+                        </NavLink>
+                    </li>
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Categorias">
+                            <span class="icon-category" aria-hidden="true"></span> Categoria
+                        </NavLink>
+                    </li>
 
-                            <li class="list-unstyled">
-                                <NavLink class="nav-link" href="Registros/Productos">
-                                    <span class="icon-shop_two" aria-hidden="true"></span> Productos
-                                </NavLink>
-                            </li>
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Registros/Productos">
+                            <span class="icon-shop_two" aria-hidden="true"></span> Productos
+                        </NavLink>
+                    </li>
 
-                            <li class="list-unstyled">
-                                <NavLink class="nav-link" href="Registros/EntradaProductos">
-                                    <span class="icon-shopping_basket" aria-hidden="true"></span> Entrada
-                                </NavLink>
-                            </li>
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Registros/EntradaProductos">
+                            <span class="icon-shopping_basket" aria-hidden="true"></span> Entrada
+                        </NavLink>
+                    </li>
 
-                            <li class="list-unstyled">
-                                <NavLink class="nav-link" href="Facturas">
-                                    <span class="icon-business" aria-hidden="true"></span> Facturación
-                                </NavLink>
-                            </li>
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Facturas">
+                            <span class="icon-business" aria-hidden="true"></span> Facturación
+                        </NavLink>
+                    </li>
 
-                            <li class="list-unstyled">
-                                <NavLink class="nav-link" href="Clientes">
-                                    <span class="icon-person_add" aria-hidden="true"></span> Cliente
-                                </NavLink>
-                            </li>
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Clientes">
+                            <span class="icon-person_add" aria-hidden="true"></span> Cliente
+                        </NavLink>
+                    </li>
 
-                            <li class="list-unstyled">
-                                <NavLink class="nav-link" href="Registros/Usuarios">
-                                    <span class="icon-people_outline" aria-hidden="true"></span> Usuario
-                                </NavLink>
-                            </li>
-                        </ul>
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Registros/Usuarios">
+                            <span class="icon-people_outline" aria-hidden="true"></span> Usuario
+                        </NavLink>
+                    </li>
+                </ul>
                     }
                 </li>
 
@@ -65,43 +70,49 @@
                     </NavLink>
                     @if (stateConsultas)
                     {
-                        <ul class="children">
-                            <li class="list-unstyled">
-                                <NavLink class="nav-link" href="ConsultaCategorias">
-                                    <span class="icon-data_usage" aria-hidden="true"></span> Categorias
-                                </NavLink>
-                            </li>
+                <ul class="children">
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Consultas/Marcas">
+                            <span class="icon-data_usage" aria-hidden="true"></span> Marcas
+                        </NavLink>
+                    </li>
 
-                            <li class="list-unstyled">
-                                <NavLink class="nav-link" href="ConsultaFacturas">
-                                    <span class="icon-data_usage" aria-hidden="true"></span> Facturas
-                                </NavLink>
-                            </li>
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="ConsultaCategorias">
+                            <span class="icon-data_usage" aria-hidden="true"></span> Categorias
+                        </NavLink>
+                    </li>
 
-                            <li class="list-unstyled">
-                                <NavLink class="nav-link" href="Consultas/Productos">
-                                    <span class="icon-data_usage" aria-hidden="true"></span> Productos
-                                </NavLink>
-                            </li>
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="ConsultaFacturas">
+                            <span class="icon-data_usage" aria-hidden="true"></span> Facturas
+                        </NavLink>
+                    </li>
 
-                            <li class="list-unstyled">
-                                <NavLink class="nav-link" href="Consultas/EntradaProductos">
-                                    <span class="icon-data_usage" aria-hidden="true"></span> Entrada
-                                </NavLink>
-                            </li>
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Consultas/Productos">
+                            <span class="icon-data_usage" aria-hidden="true"></span> Productos
+                        </NavLink>
+                    </li>
 
-                            <li class="list-unstyled">
-                                <NavLink class="nav-link" href="ConsultaClientes">
-                                    <span class="icon-data_usage" aria-hidden="true"></span> Clientes
-                                </NavLink>
-                            </li>
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Consultas/EntradaProductos">
+                            <span class="icon-data_usage" aria-hidden="true"></span> Entrada
+                        </NavLink>
+                    </li>
 
-                            <li class="list-unstyled">
-                                <NavLink class="nav-link" href="Consultas/Usuarios">
-                                    <span class="icon-data_usage" aria-hidden="true"></span> Usuarios
-                                </NavLink>
-                            </li>
-                        </ul>
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="ConsultaClientes">
+                            <span class="icon-data_usage" aria-hidden="true"></span> Clientes
+                        </NavLink>
+                    </li>
+
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Consultas/Usuarios">
+                            <span class="icon-data_usage" aria-hidden="true"></span> Usuarios
+                        </NavLink>
+                    </li>
+                </ul>
                      }
                 </li>
 
@@ -111,49 +122,55 @@
                     </NavLink>
                     @if (stateReportes)
                     {
-                        <ul class="children">
-                            <li class="list-unstyled">
-                                <NavLink class="nav-link" href="Reportes/Categorias">
-                                    <span class="icon-show_chart" aria-hidden="true"></span> Categorias
-                                </NavLink>
-                            </li>
+                <ul class="children">
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Reportes/Marcas">
+                            <span class="icon-show_chart" aria-hidden="true"></span> Marcas
+                        </NavLink>
+                    </li>
 
-                            <li class="list-unstyled">
-                                <NavLink class="nav-link" href="Reportes/Productos">
-                                    <span class="icon-show_chart" aria-hidden="true"></span> Productos
-                                </NavLink>
-                            </li>
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Reportes/Categorias">
+                            <span class="icon-show_chart" aria-hidden="true"></span> Categorias
+                        </NavLink>
+                    </li>
 
-                            <li class="list-unstyled">
-                                <NavLink class="nav-link" href="Reportes/EntradaProductos">
-                                    <span class="icon-show_chart" aria-hidden="true"></span> Entrada
-                                </NavLink>
-                            </li>
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Reportes/Productos">
+                            <span class="icon-show_chart" aria-hidden="true"></span> Productos
+                        </NavLink>
+                    </li>
 
-                            <li class="list-unstyled">
-                                <NavLink class="nav-link" href="Reportes/Reorden">
-                                    <span class="icon-show_chart" aria-hidden="true"></span> Reorden
-                                </NavLink>
-                            </li>
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Reportes/EntradaProductos">
+                            <span class="icon-show_chart" aria-hidden="true"></span> Entrada
+                        </NavLink>
+                    </li>
 
-                            <li class="list-unstyled">
-                                <NavLink class="nav-link" href="Reportes/Clientes">
-                                    <span class="icon-show_chart" aria-hidden="true"></span> Clientes
-                                </NavLink>
-                            </li>
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Reportes/Reorden">
+                            <span class="icon-show_chart" aria-hidden="true"></span> Reorden
+                        </NavLink>
+                    </li>
 
-                            <li class="list-unstyled">
-                                <NavLink class="nav-link" href="Reportes/Usuarios">
-                                    <span class="icon-show_chart" aria-hidden="true"></span> Usuarios
-                                </NavLink>
-                            </li>
-                            <li class="list-unstyled">
-                                <NavLink class="nav-link" href="Reportes/Facturas">
-                                    <span class="icon-show_chart" aria-hidden="true"></span> Facturas
-                                </NavLink>
-                            </li>
-                            
-                        </ul>
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Reportes/Clientes">
+                            <span class="icon-show_chart" aria-hidden="true"></span> Clientes
+                        </NavLink>
+                    </li>
+
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Reportes/Usuarios">
+                            <span class="icon-show_chart" aria-hidden="true"></span> Usuarios
+                        </NavLink>
+                    </li>
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Reportes/Facturas">
+                            <span class="icon-show_chart" aria-hidden="true"></span> Facturas
+                        </NavLink>
+                    </li>
+
+                </ul>
                      }
                 </li>
             </ul>
