--- a/ProyectoFinalAp2/Pages/Consultas/C_EntradaProductos.razor
+++ b/ProyectoFinalAp2/Pages/Consultas/C_EntradaProductos.razor
@@ -7,6 +7,7 @@
 @using ProyectoFinalAp2.Paginacion;
 @using System.IO;
 @using System.Linq.Expressions;
+@using System.Globalization;
 
 @inject ExportService exportService
 @inject Microsoft.JSInterop.IJSRuntime JS
