Registro de proveedor agregado...

--- a/ProyectoFinalAp2/Shared/NavMenu.razor
+++ b/ProyectoFinalAp2/Shared/NavMenu.razor
@@ -60,6 +60,11 @@
                             <span class="icon-people_outline" aria-hidden="true"></span> Usuario
                         </NavLink>
                     </li>
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Proveedor">
+                            <span class="icon-card_travel" aria-hidden="true"></span> Proveedor
+                        </NavLink>
+                    </li>
                 </ul>
                     }
                 </li>
