Consulta de proveedores agregada..

--- a/ProyectoFinalAp2/Shared/NavMenu.razor
+++ b/ProyectoFinalAp2/Shared/NavMenu.razor
@@ -117,6 +117,11 @@
                             <span class="icon-data_usage" aria-hidden="true"></span> Usuarios
                         </NavLink>
                     </li>
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="ConsultaProveedores">
+                            <span class="icon-data_usage" aria-hidden="true"></span> Proveedores
+                        </NavLink>
+                    </li>
                 </ul>
                      }
                 </li>
