Reportes de proveedores agregado..

--- a/ProyectoFinalAp2/Pages/Reportes/ReporteClientes.razor
+++ b/ProyectoFinalAp2/Pages/Reportes/ReporteClientes.razor
@@ -31,6 +31,7 @@
                         <th>RNC</th>
                         <th>DIRECCION</th>
                         <th>TELEFONO</th>
+                        <th>FECHA</th>
                         <th>EMAIL</th>
                     </tr>
                 </thead>
@@ -43,6 +44,7 @@
                             <td>@item.RNC</td>
                             <td>@item.Direccion</td>
                             <td>@item.Telefono</td>
+                            <td>@item.Fecha</td>
                             <td>@item.Email</td>
                         </tr>
                     }
