--- a/ProyectoFinalAp2/Shared/NavMenu.razor
+++ b/ProyectoFinalAp2/Shared/NavMenu.razor
@@ -179,6 +179,11 @@
                             <span class="icon-show_chart" aria-hidden="true"></span> Facturas
                         </NavLink>
                     </li>
+                    <li class="list-unstyled">
+                        <NavLink class="nav-link" href="Reportes/Proveedor">
+                            <span class="icon-show_chart" aria-hidden="true"></span> Proveedores
+                        </NavLink>
+                    </li>
 
                 </ul>
                      }
